@@ -45,28 +45,28 @@
 					"Item A": {
 						color: "#e74c3c",
 						inputType: "text",
-						inputSelected: true,
+						inputChecked: true,
 						inputPlaceholder: "Example input"
 					},
 					"Item B": {
 						color: "#f1c40f", 
 						inputType: "checkbox",
-						inputSelected: false
+						inputChecked: false
 					},
 					"Item C": {
 						color: "#2ecc71",
 						inputType: "checkbox",
-						inputSelected: false
+						inputChecked: false
 					},
 					"Item D": {
 						color: "#3498db",
 						inputType: "checkbox",
-						inputSelected: false
+						inputChecked: false
 					},
 					"Item E": {
 						color: "#7f8c8d",
 						inputType: "checkbox",
-						inputSelected: true
+						inputChecked: true
 					}
 				},
 				footer: {
@@ -107,27 +107,27 @@
 					"List A": {
 						color: "#e74c3c",
 						inputType: "checkbox",
-						inputSelected: true
+						inputChecked: true
 					},
 					"List B": {
 						color: "#f1c40f", 
 						inputType: "checkbox",
-						inputSelected: false
+						inputChecked: false
 					},
 					"List C": {
 						color: "#2ecc71",
 						inputType: "checkbox",
-						inputSelected: false
+						inputChecked: false
 					},
 					"List D": {
 						color: "#3498db",
 						inputType: "checkbox",
-						inputSelected: false
+						inputChecked: false
 					},
 					"List E": {
 						color: "#7f8c8d",
 						inputType: "checkbox",
-						inputSelected: false
+						inputChecked: false
 					},
 				},
 				onClick: function(key, item, dom){
@@ -197,7 +197,7 @@
 				<li>checkbox</li>
 			</ul>
 
-			<h4>'inputSelected'</h4>
+			<h4>'inputChecked'</h4>
 
 			This option is usable when using 'inputType' option with 'checkbox'. value: true / false.
 
