@@ -4,6 +4,9 @@ https://github.com/mugifly/jquery-hover-dropdown-box/
 1.1.0  2013-09-06
    - [Fix] Separate the parent dom and the trigger dom, on Hover mode.
    - [Fix] Support for stylesheet in various existing environment.
+   - [Fix] Malfuction about the default value of a checkbox
+   - [Change] Renamed the 'inputSelected' option of an items => 'inputChecked'
+     ('inputSelected' option is deprecated.)
 
 1.0.0  2013-08-23
    - Initial release (alpha)
